[package]
name = "demoinfo"
version = "0.1.0"
authors = ["Jaakko Hannikainen <jaakko.hannikainen@solita.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.7"
byteorder = "1"
lazy_static = "1"
itertools = "0.10"

[build-dependencies]
prost-build = "0.7"

